# ffi-test

./: .gitignore  Cargo.toml  bindings.h  build.rs  cbindgen.toml  composer.json  test.php
drmcore/: Cargo.toml
drmcore/src/: encryption.rs  file_joiner.rs  file_splitter.rs  jpeg.rs  lib.rs  watermark_task.rs  webp_container.rs
drmcore/src/jpeg/: container.rs  custom_segment.rs
drmlib/: Cargo.toml  bindings.h  build.sh
drmlib/src/: arr_result.rs  img.rs  lib.rs  macro_helper.rs  misc.rs  watermark.rs
drmwasm/: Cargo.toml  build.sh
drmwasm/src/: lib.rs
drmweb/: package.json  pnpm-lock.yaml  vite.config.ts
drmweb/src/: App.vue
src/: arr_result.rs  encryption.rs  file_joiner.rs  img.rs  jpeg.rs  jpeg_container.rs  lib.rs  watermark_task.rs  webp_container.rs
src/jpeg/: container.rs  custom_segment.rs  mod.rs  reader.rs  writer.rs
