[package]
name = "ffi-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.1", features = ["jpeg", "webp"] }

[build-dependencies]
cbindgen = "0.24.0"
