[package]
name = "ffi-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
image = { version = "0.25.1", features = ["jpeg", "webp"] }
thiserror = "1.0.59"

[build-dependencies]
cbindgen = "0.24.0"
