[package]
name = "ffi-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
#crate-type = ["cdylib"]

[[bin]]
name = "test_jpeg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.82"
image = { version = "0.25.1", features = ["jpeg", "webp"] }
thiserror = "1.0.59"

[build-dependencies]
cbindgen = "0.24.0"
